Udated properties file

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -2,3 +2,6 @@ message.hello=Hello from development properties file
 
 #Disable automatic restart
 #spring.devtools.restart.enabled=false
+
+#disable the security feature of the actuator
+#management.security.enabled=false
